tests/baselines/reference/intersectionTypeOverloading.errors.txt
intersectionTypeOverloading.ts(14,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'y' must be of type 'string', but here has type 'any'.


==== intersectionTypeOverloading.ts (1 errors) ====
    // Check that order is preserved in intersection types for purposes of
    // overload resolution
    
    type F = (s: string) => string;
    type G = (x: any) => any;
    
    var fg: F & G;
    var gf: G & F;
    
    var x = fg("abc");
    var x: string;
    
    var y = gf("abc");
    var y: any;
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'y' must be of type 'string', but here has type 'any'.
!!! related TS6203 intersectionTypeOverloading.ts:13:5: 'y' was also declared here.
    